# Personal-Blog

./: .gitignore  README.md  _config.yml  about.md  build.sh  connect.sh  serve.sh  upload.sh
_drafts/: LPC810-T01.markdown  LPC810-T02.markdown  LPC810-T03.markdown
_includes/: footer.html  head.html  header.html
_includes/repo/00-Getting_Started/: Makefile  crt0.S  main.c  main.disasm
_includes/repo/00-Getting_Started/LPC810/: lpc810.ld
_includes/repo/01-Getting_Started/: crt0.S
_includes/repo/02-BSS_Data/: Makefile  crt0.S  main.c
_includes/repo/02-BSS_Data/LPC810/: lpc810.ld
_includes/repo/03-GPIO/: CMakeLists.txt  Makefile.bak  Toolchain-arm-none-eabi.cmake  main.c
_includes/repo/03-GPIO/lpc810/: crt0.S  device.h  vectors.c
_includes/repo/04-Clock-Timer/: CMakeLists.txt  Toolchain-arm-none-eabi.cmake  main.c
_includes/repo/04-Clock-Timer/lpc810/: device.h  lpc810.ld
_plugins/: publisher.rb
_posts/: 2014-11-12-welcome-to-jekyll.markdown  2014-11-27-LPC810-T01.markdown  2014-11-27-LPC810-T02.markdown  2014-11-29-LPC810-T03.markdown
_sass/: _base.scss  _layout.scss  _syntax-highlighting.scss
css/: main.scss
